--- a/docs/tex/main.tex
+++ b/docs/tex/main.tex
@@ -1,6 +1,13 @@
-\documentclass[12pt]{article}
+\documentclass[14pt]{extarticle}
 \input{includes/settings}
 
 \begin{document}
-Привет, мир! Это \textenglish{Hello, world!} через Xe\LaTeX.
+\justifying
+\input{proposal}    % подключает proposal.tex
+
+% если есть другие главы:
+% \input{lit_review}
+\input{timeline}
+
+\printbibliography
 \end{document}
