--- a/docs/tex/proposal.tex
+++ b/docs/tex/proposal.tex
@@ -105,7 +105,7 @@ RUONIA, ключевой ставки, курс USD/RUB, индексы ликв
 Долгосрочная цель — Neural SDE / Neural PDE: обучить
 дифференциальное уравнение, объясняющее «длинную память» RUONIA.
 
-\section{Research Questions and Objectives}
+\section{Цели и задачи}
 
 \begin{enumerate}
   \item \textbf{RQ1}: Улучшают ли TFT, DeepAR, Normalizing Flows и
@@ -132,7 +132,7 @@ RUONIA, ключевой ставки, курс USD/RUB, индексы ликв
 «точечным» прогнозом ставки и реальными требованиями риск-менеджмента.
 
 
-\section{Methodology}
+\section{Методология}
 
 \subsection{Probabilistic Sequence Models}
 
