--- a/docs/tex/main.tex
+++ b/docs/tex/main.tex
@@ -3,9 +3,8 @@
 
 \begin{document}
 \justifying
-\input{proposal}    % подключает proposal.tex
+\input{proposal}  
 
-% если есть другие главы:
 % \input{lit_review}
 \input{timeline}
 
