--- a/docs/tex/timeline.tex
+++ b/docs/tex/timeline.tex
@@ -18,9 +18,9 @@
 
 15–21 июня    & \textbf{W5} & Итоговые метрики + Diebold–Mariano, CPA-тесты; абляция признаков, SHAP-анализ TFT \\[0.6ex]
 
-22–28 июня    & \textbf{W6} & Черновик отчёта, README для GitHub; слайды (10 стр.) для внутренней защиты \\[0.6ex]
+22–28 июня    & \textbf{W6} & Черновик отчёта, README для GitHub; слайды \\[0.6ex]
 
-29–30 июня    & \textbf{Buffer} & Полировка кода, оформление библиографии, загрузка финального PDF и ноутбуков \\ \midrule
+29–30 июня    & \textbf{Buffer} & Загрузка финального PDF и ноутбуков \\ \midrule
 \multicolumn{3}{@{}p{14.1cm}@{}}{\emph{Задача со звёздочкой (Neural SDE для совместного распределения)} планируется как расширение магистерского проекта: старт в июле 2025 после фиксации базовых результатов.} \\ \bottomrule
 \end{tabular}
 \end{center}
