--- a/docs/bib/references.bib
+++ b/docs/bib/references.bib
@@ -334,3 +334,40 @@ publisher={Wiley}
   pages   = {777--795},
   doi     = {10.1002/jae.1279}
 }
+
+@manual{nfa_reglament,
+  title = {Регламент публикации ставок RUONIA и ROISfix},
+  author = {{Национальная финансовая ассоциация}},
+  year = {2025},
+  url = {https://nfarussia.org/reglament},
+}
+@manual{nfa_calendar,
+  title = {Календарь публикаций NFA},
+  author = {{Национальная финансовая ассоциация}},
+  year = {2025},
+  url = {https://nfarussia.org/calendar},
+}
+@manual{cbr_fx_letter,
+  title = {Информационное письмо Банка России о публикации валютных курсов},
+  author = {{Банк России}},
+  year = {2025},
+  url = {https://cbr.ru/fx_markets},
+}
+@manual{cbr_calendar,
+  title = {Календарь банковских выходных ЦБ РФ},
+  author = {{Банк России}},
+  year = {2025},
+  url = {https://cbr.ru/calendar},
+}
+@manual{moex_post_trade,
+  title = {Post-Trade сервисы MOEX},
+  author = {{Московская биржа}},
+  year = {2025},
+  url = {https://moex.com/posttrade},
+}
+@manual{moex_calendar,
+  title = {Торговый календарь MOEX},
+  author = {{Московская биржа}},
+  year = {2025},
+  url = {https://moex.com/calendar},
+}
