--- a/docs/tex/main.tex
+++ b/docs/tex/main.tex
@@ -1,4 +1,5 @@
 \documentclass[14pt]{extarticle}
+
 \input{includes/settings}
 
 \begin{document}
@@ -7,6 +8,14 @@
 
 % \input{lit_review}
 \input{timeline}
+
+\clearpage
+\begin{landscape}
+\input{data\_publication\_metadata}
+\end{landscape}
+
+\clearpage
+
 
 \printbibliography
 \end{document}
