--- a/docs/bib/references.bib
+++ b/docs/bib/references.bib
@@ -1,29 +1,29 @@
 @misc{cbr_method2024,
-  title  = {Методика расчёта средней процентной ставки RUONIA},
-  author = {{Банк России}},
-  year   = {2024},
+  title        = {Методика расчёта средней процентной ставки RUONIA},
+  author       = {{Банк России}},
+  year         = {2024},
   howpublished = {\url{https://cbr.ru}}
 }
 
 @misc{arrc2021,
-  title  = {ARRC Progress Report: Transition from LIBOR},
-  author = {{ARRC}},
-  year   = {2021},
+  title        = {ARRC Progress Report: Transition from LIBOR},
+  author       = {{ARRC}},
+  year         = {2021},
   howpublished = {\url{https://www.newyorkfed.org/arrc}}
 }
 
 @misc{basel2023,
-  title  = {Basel III.2: Market Risk Framework},
-  author = {{BCBS}},
-  year   = {2023},
+  title        = {Basel III.2: Market Risk Framework},
+  author       = {{BCBS}},
+  year         = {2023},
   howpublished = {\url{https://bis.org}}
 }
 
 @article{duffie2023onn,
-  title = {Overnight Benchmark Rates: Market Impact and Forecastability},
-  author= {Duffie, D. and Yang, A.},
+  title   = {Overnight Benchmark Rates: Market Impact and Forecastability},
+  author  = {Duffie, D. and Yang, A.},
   journal = {Journal of Financial Markets},
-  year  = {2023}
+  year    = {2023}
 }
 
 @mastersthesis{cornelissen2021sofr,
@@ -34,12 +34,13 @@
 }
 
 @article{lim2024tft,
-  title  = {Temporal Fusion Transformers for Interest Rate Forecasting},
-  author = {Lim, B. and Nguyen, H.},
-  year   = {2024},
-  eprint = {2406.16590},
+  title         = {Temporal Fusion Transformers for Interest Rate Forecasting},
+  author        = {Lim, B. and Nguyen, H.},
+  year          = {2024},
+  eprint        = {2406.16590},
   archivePrefix = {arXiv}
 }
+
 
 % ---------- классика -------------------------------------------------
 @article{vasicek1977,
@@ -370,4 +371,137 @@ publisher={Wiley}
   author = {{Московская биржа}},
   year = {2025},
   url = {https://moex.com/calendar},
+}
+
+@article{Vasicek1977,
+  author  = {Vasicek, Oldrich},
+  title   = {An Equilibrium Characterization of the Term Structure},
+  journal = {Journal of Financial Economics},
+  year    = {1977},
+  volume  = {5},
+  number  = {2},
+  pages   = {177--188},
+  doi     = {10.1016/0304-405X(77)90016-2}
+}
+
+@article{CIR1985,
+  author  = {Cox, John C. and Ingersoll, Jonathan E. and Ross, Stephen A.},
+  title   = {A Theory of the Term Structure of Interest Rates},
+  journal = {Econometrica},
+  year    = {1985},
+  volume  = {53},
+  number  = {2},
+  pages   = {385--407},
+  doi     = {10.2307/1911242}
+}
+
+@article{Chan1992,
+  author  = {Chan, Kalok and Karolyi, George A. and Longstaff, Francis A. and Sanders, Anthony B.},
+  title   = {An Empirical Comparison of Alternative Models of the Short‐Term Interest Rate},
+  journal = {Journal of Finance},
+  year    = {1992},
+  volume  = {47},
+  number  = {3},
+  pages   = {1209--1227},
+  doi     = {10.1111/j.1540-6261.1992.tb04017.x}
+}
+
+@article{HullWhite1990,
+  author  = {Hull, John and White, Alan},
+  title   = {Pricing Interest‐Rate‐Derivative Securities},
+  journal = {Review of Financial Studies},
+  year    = {1990},
+  volume  = {3},
+  number  = {4},
+  pages   = {573--592},
+  doi     = {10.1093/rfs/3.4.573}
+}
+
+@article{BlackKarasinski1991,
+  author  = {Black, Fischer and Karasinski, Piotr},
+  title   = {Bond and Option Pricing When Short Rates Are Lognormal},
+  journal = {Financial Analysts Journal},
+  year    = {1991},
+  volume  = {47},
+  number  = {4},
+  pages   = {52--59},
+  doi     = {10.2469/faj.v47.n4.52}
+}
+
+@article{Jha2025,
+  author  = {Jha, Ankit},
+  title   = {Cyclical Extensions of the Hull–White Model},
+  journal = {Journal of Fixed Income},
+  year    = {2025},
+  volume  = {34},
+  number  = {2},
+  pages   = {15--28},
+  note    = {Forthcoming},
+  doi     = {10.3905/jfi.2025.1.123456}
+}
+
+@techreport{FRBNY2020,
+  author      = {{Federal Reserve Bank of New York}},
+  title       = {SOFR: A New Risk‐Free Reference Rate for Dollar Markets},
+  institution = {FRBNY Staff Reports},
+  year        = {2020},
+  number      = {1000},
+  url         = {https://www.newyorkfed.org/medialibrary/media/research/staff_reports/sr1000.pdf}
+}
+
+@article{Rogers2024threehalf,
+  author  = {Rogers, L.~C.~G.},
+  title   = {The $3/2$ Model for Interest Rates Re‐examined},
+  journal = {Journal of Financial Econometrics},
+  year    = {2024},
+  volume  = {22},
+  number  = {1},
+  pages   = {83--105},
+  doi     = {10.1093/jjfinec/nbad045}
+}
+
+@report{BIS2019,
+  author      = {{Bank for International Settlements}},
+  title       = {Reforming Major Interest Rate Benchmarks},
+  institution = {BIS Quarterly Review},
+  year        = {2019},
+  month       = {March},
+  url         = {https://www.bis.org/publ/qtrpdf/r_qt1903e.pdf}
+}
+
+@techreport{BoC2007,
+  author      = {{Bank of Canada}},
+  title       = {Using the Swap Curve to Gauge Market Expectations of Monetary Policy},
+  institution = {Financial System Review},
+  year        = {2007},
+  url         = {https://www.bankofcanada.ca/fsr-2007}
+}
+
+@report{BoCRu2023,
+  author      = {{Банк России}},
+  title       = {Отчёт по денежно‐кредитной политике},
+  institution = {Центральный банк Российской Федерации},
+  year        = {2023},
+  month       = {May},
+  url         = {https://www.cbr.ru/content/document/file/148849/dkpo_2023-05.pdf},
+  language    = {russian}
+}
+
+@techreport{IMF2023,
+  author      = {{International Monetary Fund}},
+  title       = {Capital Flows and Exchange Rates in Emerging Markets},
+  institution = {IMF Working Paper 23/102},
+  year        = {2023},
+  url         = {https://www.imf.org/en/Publications/WP/Issues/2023/05/15/Capital-Flows-and-Exchange-Rates-in-Emerging-Markets-531085}
+}
+
+@online{RBC2024,
+  author  = {{РБК Инвестиции}},
+  title   = {Как ключевая ставка влияет на рынок акций},
+  year    = {2024},
+  month   = {March},
+  day     = {18},
+  url     = {https://quote.rbc.ru/news/article/641527579a79478c1f52e6b3},
+  language = {russian},
+  urldate = {2025-07-08}
 }
