--- a/docs/tex/includes/settings.tex
+++ b/docs/tex/includes/settings.tex
@@ -18,6 +18,6 @@
 \usepackage{ragged2e}
 \usepackage{booktabs}
 \usepackage{pdflscape}
-\usepackage{tabularx}      % авто-растягиваемые колонки X
-\usepackage{array}         % >{\centering\arraybackslash}
+\usepackage{tabularx}     
+\usepackage{array}        
 \usepackage{csquotes}
