--- a/docs/tex/main.tex
+++ b/docs/tex/main.tex
@@ -4,9 +4,9 @@
 
 \begin{document}
 \justifying
-\input{proposal}  
+%\input{proposal}  
 
-% \input{lit_review}
+\input{lit_review}
 \input{timeline}
 
 \clearpage
