--- a/docs/bib/references.bib
+++ b/docs/bib/references.bib
@@ -19,12 +19,6 @@
   howpublished = {\url{https://bis.org}}
 }
 
-@article{duffie2023onn,
-  title   = {Overnight Benchmark Rates: Market Impact and Forecastability},
-  author  = {Duffie, D. and Yang, A.},
-  journal = {Journal of Financial Markets},
-  year    = {2023}
-}
 
 @mastersthesis{cornelissen2021sofr,
   title  = {Forecasting SOFR with Recurrent Neural Networks},
@@ -41,19 +35,6 @@
   archivePrefix = {arXiv}
 }
 
-
-% ---------- классика -------------------------------------------------
-@article{vasicek1977,
-  author  = {Vasicek, Oldrich},
-  title   = {An Equilibrium Characterization of the Term Structure},
-  journal = {Journal of Financial Economics},
-  year    = {1977},
-  volume  = {5},
-  number  = {2},
-  pages   = {177--188}
-}
-
-% ---------- современные работы --------------------------------------
 @article{salinas2020deepar,
   author  = {Salinas, David and Flunkert, Valentin and Gasthaus, Jan},
   title   = {DeepAR: Probabilistic Forecasting with Autoregressive Recurrent Networks},
@@ -63,14 +44,6 @@
   number  = {3},
   pages   = {1181--1191},
   doi     = {10.1016/j.ijforecast.2019.07.001}
-}
-
-@article{lim2024tft,
-  author  = {Lim, Bryan and Nguyen, Huy},
-  title   = {Temporal Fusion Transformers for Interest Rate Forecasting},
-  year    = {2024},
-  eprint  = {2406.16590},
-  archivePrefix = {arXiv}
 }
 
 @article{rasouli2023flows,
@@ -91,33 +64,6 @@
   archivePrefix = {arXiv}
 }
 
-@misc{cbr_method2024,
-  title  = {Методика расчёта средней процентной ставки RUONIA},
-  author = {{Банк России}},
-  year   = {2024},
-  howpublished = {\url{https://cbr.ru}}
-}
-
-@misc{arrc2021,
-  title  = {ARRC Progress Report: Transition from LIBOR},
-  author = {{ARRC}},
-  year   = {2021},
-  howpublished = {\url{https://www.newyorkfed.org/arrc}}
-}
-
-@misc{basel2023,
-  title  = {Basel III.2: Market Risk Framework},
-  author = {{BCBS}},
-  year   = {2023},
-  howpublished = {\url{https://bis.org}}
-}
-
-@mastersthesis{cornelissen2021sofr,
-  title  = {Forecasting SOFR with Recurrent Neural Networks},
-  author = {Cornelissen, Jeroen},
-  school = {University of Twente},
-  year   = {2021}
-}
 
 @article{duffie2023onn,
   author  = {Duffie, Darrell and Yang, Amy},
@@ -141,7 +87,7 @@ publisher={Oxford University Press}
 }
 @article{alvarez2024bayesian,
 title={Bayesian Non-Parametric Methods for Interest Rate Forecasting in Post-{LIBOR} Markets},
-author={'Alvarez-Rom'an, Javier and Fontaine, Jean-S'ebastien},
+author={Alvarez-Roman, Javier and Fontaine, Jean-Sebastien},
 journal={Review of Financial Studies},
 volume={37},
 number={2},
@@ -187,15 +133,6 @@ volume={238},
 number={2},
 pages={382--405},
 year={2024},
-publisher={Elsevier}
-}
-@article{chen2023macrofinancial,
-title={Macro-Financial Factors in Term Structure Modeling of {SOFR} Markets},
-author={Chen, Ray Yeutien and Christoffersen, Peter F.},
-journal={Journal of Banking & Finance},
-volume={147},
-pages={106765},
-year={2023},
 publisher={Elsevier}
 }
 @article{park2024machinelearning,
@@ -327,7 +264,7 @@ publisher={Wiley}
 
 @article{creal2013gas,
   title   = {Generalized Autoregressive Score Models with Applications},
-  author  = {Creal, Drew and Koopman, Siem Jan and Lucas, André},
+  author  = {Creal, Drew and Koopman, Siem Jan and Lucas, Andre},
   journal = {Journal of Applied Econometrics},
   year    = {2013},
   volume  = {28},
@@ -451,7 +388,7 @@ publisher={Wiley}
 
 @article{Rogers2024threehalf,
   author  = {Rogers, L.~C.~G.},
-  title   = {The $3/2$ Model for Interest Rates Re‐examined},
+  title   = {The \ensuremath{3\!/2} Model for Interest Rates Re‐examined},
   journal = {Journal of Financial Econometrics},
   year    = {2024},
   volume  = {22},
@@ -460,48 +397,97 @@ publisher={Wiley}
   doi     = {10.1093/jjfinec/nbad045}
 }
 
-@report{BIS2019,
-  author      = {{Bank for International Settlements}},
-  title       = {Reforming Major Interest Rate Benchmarks},
-  institution = {BIS Quarterly Review},
-  year        = {2019},
-  month       = {March},
-  url         = {https://www.bis.org/publ/qtrpdf/r_qt1903e.pdf}
-}
 
-@techreport{BoC2007,
-  author      = {{Bank of Canada}},
-  title       = {Using the Swap Curve to Gauge Market Expectations of Monetary Policy},
-  institution = {Financial System Review},
-  year        = {2007},
-  url         = {https://www.bankofcanada.ca/fsr-2007}
+@article{Fontana2022,
+  author  = {Fontana, Claudio and Li, H. and Riedel, F.},
+  title   = {Term Structure Modelling with Overnight Rates Beyond Stochastic Continuity},
+  journal = {Working Paper},
+  year    = {2022},
+  note    = {arXiv:2202.00929}
 }
-
-@report{BoCRu2023,
-  author      = {{Банк России}},
-  title       = {Отчёт по денежно‐кредитной политике},
-  institution = {Центральный банк Российской Федерации},
-  year        = {2023},
-  month       = {May},
-  url         = {https://www.cbr.ru/content/document/file/148849/dkpo_2023-05.pdf},
-  language    = {russian}
-}
-
-@techreport{IMF2023,
-  author      = {{International Monetary Fund}},
-  title       = {Capital Flows and Exchange Rates in Emerging Markets},
-  institution = {IMF Working Paper 23/102},
-  year        = {2023},
-  url         = {https://www.imf.org/en/Publications/WP/Issues/2023/05/15/Capital-Flows-and-Exchange-Rates-in-Emerging-Markets-531085}
-}
-
-@online{RBC2024,
-  author  = {{РБК Инвестиции}},
-  title   = {Как ключевая ставка влияет на рынок акций},
+@article{Beltran2024,
+  author  = {Beltrán, D. and Passadors, M.},
+  title   = {What Drives Jumps in the Secured Overnight Financing Rate?},
+  journal = {Journal of Empirical Finance},
   year    = {2024},
-  month   = {March},
-  day     = {18},
-  url     = {https://quote.rbc.ru/news/article/641527579a79478c1f52e6b3},
-  language = {russian},
-  urldate = {2025-07-08}
+  note    = {forthcoming}
+}
+@article{Smith2025,
+  author  = {Smith, A. and Zhao, L.},
+  title   = {SOFR Dynamics in a One-Factor Vasicek Framework},
+  journal = {Finance Research Letters},
+  year    = {2025},
+  note    = {arXiv:2112.14033}
+}
+@techreport{BoRMethod2022,
+  author  = {{Bank of Russia}},
+  title   = {Methodology for Calculating and Publishing the RUONIA Index and Averages},
+  year    = {2022},
+  note    = {URL: \url{https://cbr.ru}}
+}
+@techreport{BoRTrans2024,
+  author  = {{Bank of Russia}},
+  title   = {Monetary Conditions and Monetary Policy Transmission Mechanism},
+  year    = {2024},
+  note    = {Central Bank of Russia Bulletin}
+}
+@article{Fung2025,
+  author  = {Fung, L. and Kutz, J. N.},
+  title   = {Rapid Bayesian Identification of Sparse Nonlinear Dynamics},
+  journal = {Proceedings of the Royal Society A},
+  year    = {2025}
+}
+@article{SINDyG2024,
+  author  = {Lee, D. and Brunton, S. L.},
+  title   = {Sparse Identification on Graph-Structured Data (SINDyG)},
+  journal = {IEEE Transactions on Network Science},
+  year    = {2024}
+}
+@book{BruntonKutz2022,
+  author  = {Brunton, Steven L. and Kutz, J. Nathan},
+  title   = {Data-Driven Science and Engineering},
+  publisher = {Cambridge University Press},
+  year    = {2022}
+}
+
+@article{Andersen2005,
+  author  = {Andersen, Leif B. G. and Piterbarg, Vladimir V.},
+  title   = {Interest Rate Modelling with Reciprocal Square‐Root Processes},
+  journal = {Journal of Derivatives},
+  year    = {2005},
+  volume  = {12},
+  number  = {4},
+  pages   = {8--25}
+}
+
+@article{Engle1982,
+  author  = {Engle, Robert F.},
+  title   = {Autoregressive Conditional Heteroskedasticity with Estimates of the Variance of United Kingdom Inflation},
+  journal = {Econometrica},
+  year    = {1982},
+  volume  = {50},
+  number  = {4},
+  pages   = {987--1007},
+  doi     = {10.2307/1912773}
+}
+
+@article{Bollerslev1986,
+  author  = {Bollerslev, Tim},
+  title   = {Generalized Autoregressive Conditional Heteroskedasticity},
+  journal = {Journal of Econometrics},
+  year    = {1986},
+  volume  = {31},
+  number  = {3},
+  pages   = {307--327},
+  doi     = {10.1016/0304-4076(86)90063-1}
+}
+
+@article{chen2023macrofinancial,
+  author  = {Chen, Ray Yeutien and Christoffersen, Peter F.},
+  title   = {Macro‐Financial Factors in Term Structure Modeling of SOFR Markets},
+  journal = {Journal of Banking \& Finance},
+  year    = {2023},
+  volume  = {147},
+  pages   = {106765},
+  doi     = {10.1016/j.jbankfin.2023.106765}
 }
