--- a/docs/tex/includes/settings.tex
+++ b/docs/tex/includes/settings.tex
@@ -4,7 +4,7 @@
   \newfontfamily\russianfont{Times New Roman}
 \setmonofont{Menlo}             
 \newfontfamily\cyrillicfonttt{Menlo} 
-
+\usepackage{textcomp}
 \usepackage[russian,english]{babel}
 \usepackage{setspace} 
 \onehalfspacing 
