--- a/docs/tex/lit_review.tex
+++ b/docs/tex/lit_review.tex
@@ -1,53 +1,188 @@
 \section{Введение}
-Однофакторные стохастические модели ставки (short-rate models) остаются основным инструментом оценивания безрисковой кривой доходности и ценообразования процентных деривативов. После реформы эталонных ставок (замена LIBOR на \textsc{risk-free rates}~— SOFR, SONIA, \euro{}STR и др.) ключевым объектом моделирования стала именно овернайт-ставка. В российском контексте её аналогом является \textsc{ruonia}. Цель раздела~— проследить эволюцию однофакторных СДУ, показать обоснование форм дрейфа и волатильности в современной литературе и аргументировать выбор рыночных факторов (свопы, ОФЗ, валюты, индекс Мосбиржи), которые мы будем использовать при калибровке модели RUONIA.
 
-\section{Классические однофакторные модели}
-\subsection{Васичек (1977)}
-Модель Васичека описывает ставку $r_t$ процессом Орнстейна–Уленбека \autocite{Vasicek1977}:
+Цель проекта -- построить \emph{однофакторное} стохастическое
+дифференциальное уравнение (СДУ), описывающее эволюцию рублевой
+овернайт-ставки (RUONIA), с использованием метода \textbf{SINdy}
+(\emph{Sparse Identification of Nonlinear Dynamics}).  
+Однофакторная спецификация для краткосрочной процентной ставки
+традиционно задаётся суммой функций \emph{дрейфа}
+$\,\mu(r_t,t)\,$ и \emph{волатильности} $\,\sigma(r_t,t)\,$:
 \begin{equation}
-  \mathrm{d}r_t = a\bigl(b - r_t\bigr)\,\mathrm{d}t + \sigma\,\mathrm{d}W_t.
+  dr_t = \mu(r_t,t)\,dt + \sigma(r_t,t)\,dW_t.
 \end{equation}
-Линейный дрейф обеспечивает средневозвратность, постоянная волатильность $\sigma$ порождает нормальное распределение, допускающее отрицательные значения — что оказалось актуальным в эпоху нулевых ставок.
+Задача литературного обзора -- (i) проанализировать,
+какие формы $\,\mu(\cdot)$ и $\,\sigma(\cdot)$ используются в современных
+однофакторных моделях срочных ставок в мире,  
+(ii) выделить рекомендации, применимые к RUONIA,  
+(iii) обосновать выбор объясняющих переменных:
+своповые котировки, доходности ОФЗ, курсы EUR/RUB, USD/RUB, CNY/RUB
+и индекс Мосбиржи.
 
-\subsection{Cox--Ingersoll--Ross (1985)}
-Чтобы исключить отрицательные значения, CIR-модель вводит зависимость волатильности от уровня ставки \autocite{CIR1985}:
-\begin{equation}
-  \mathrm{d}r_t = a\bigl(b - r_t\bigr)\,\mathrm{d}t + \sigma\sqrt{r_t}\,\mathrm{d}W_t.
-\end{equation}
-Эмпирические тесты Chan \textit{et al.} \autocite{Chan1992} показали эффект уровня: дисперсия растет при повышении $r_t$. Значения степени $\gamma\approx1.3\text{--}1.6$ в расширенной формуле $\sigma\,r_t^{\gamma}$ подтверждены и на рынках евро и фунта.
+\section{Классические однофакторные СДУ для краткосрочных ставок}
 
-\subsection{Hull--White (1990) и Black--Karasinski (1991)}
-Hull--White сохраняет гауссовский характер, но позволяет параметрам быть функцией времени, что дает точную калибровку к начальной кривой \autocite{HullWhite1990}. Black--Karasinski моделирует логарифм ставки, обеспечивая строго положительные значения и логнормальное распределение \autocite{BlackKarasinski1991}.
+\subsection{Модель Васичека}
+Первой в литературу вошла гауссовская
+модель \cite{Vasicek1977}:
+$dr_t = \kappa(\theta - r_t)\,dt + \sigma\,dW_t$.
+Линейный дрейф обеспечивает
+экспоненциальную \emph{mean-reversion},
+а константная волатильность -- аналитическую
+удобность (закрытые формулы для ZCB и свопов).
 
-\section{Современные расширения}
-\subsection{Циклические компоненты}
-Jha \autocite{Jha2025} предложил синусоидальную модификацию Hull--White, где скорость реверсии колеблется:
-\[
-  a(t) = a_0 + \Delta a \sin(\omega t).
-\]
-Это улучшает описание 20-летних макроциклов, выявленных в ставках SOFR.
+\subsection{Модель Кокса-Инголлса-Росса (CIR)}
+\cite{CIR1985} предложили квадрат-корневую
+волатильность $\,\sigma\sqrt{r_t}\,$,
+что гарантирует неотрицательность процентных ставок
+и лучше описывает вариативность вблизи нуля.
+Однако в периоды высоких ставок (как в России)
+гетероскедастичность CIR может переоценивать дисперсию.
 
-\subsection{Сезонность овернайт-ставок}
-ФРБ Нью-Йорка \autocite{FRBNY2020} документировал квартальные всплески SOFR, связанные с балансировочными ограничениями банков. Практика прогнозирования включает гармонические члены $S\sin(2\pi t) + C\cos(2\pi t)$ в дрейфе; аналогичные «налоговые» эффекты отмечены и для RUONIA.
+\subsection{Расширенный Васичек (Халл-Уайт)}
+\cite{HullWhite1990} расширили модель Васичека,
+разрешив $\,\theta(t)\,$ быть функцией времени.
+Это позволяет точно калиброваться под текущую кривую
+без добавления факторов.
 
-\subsection{Отрицательные ставки и нелинейные диффузии}
-Распространение отрицательных ставок стимулировало модели shifted-CIR и нормальные модели (Hull--White) с волатильностями Башелье. Для нивелирования нулевой границы предлагается модель $3/2$ ($\sigma\,r_t^{3/2}$), сохраняющая высокую дисперсию при малых $r_t$ \autocite{Rogers2024threehalf}.
+\subsection{Логнормальная динамика (Black-Karasinski)}
+В \cite{BlackKarasinski1991} дрейф остался
+средне-обратимым, но логарифм ставки следует OU-процессу,
+что исключает отрицательные значения при умеренной
+комплексности.
 
-\section{Реформа эталонных ставок}
-Переход на RFR (SOFR, SONIA, \euro{}STR, TONA) означал, что базовой случайной величиной становится именно овернайт-безрисковая ставка \autocite{BIS2019}. В отличие от LIBOR, она более волатильна внутримесячно, что усиливает требования к модели волатильности и сезонных поправок.
+\subsection{Сравнение для позиций овернайт}
+Для высокочастотных (O/N) ставок классические
+модели дополняют \emph{сезонными} и \emph{регуляторными}
+компонентами -- см. \cite{Beltran2024},
+где для SOFR к гауссовому дрейфу добавлены скачки,
+ассоциированные с концом отчётных периодов.
 
-\section{Макро- и рыночные факторы, влияющие на ставки}
+\section{Современные спецификации для RFR-бенчмарков}
+
+Окончательный отказ от LIBOR вызвал волну исследований
+новых \textbf{overnight} бенчмарков (SOFR, \texteuro STR, SONIA).  
+\cite{Fontana2022} формулируют общий
+\emph{affine-семимартингал} с дискретными
+дисконтиниутетами (policy jumps), а
+\cite{Beltran2024} выявляют значимость пуассоновских
+скачков в SOFR.  
+Для прикладных расчётов используются упрощённые
+однофакторные модели -- напр.\ однафакторный
+Vasicek для совместной динамики SOFR и unsecured rate
+\cite{Smith2025}.  
+Сезонность (конец месяца, отчётный квартал)
+обычно аппроксимируют синусоидальной добавкой
+к дрейфу: $\mu(r_t,t)=\kappa(\theta-r_t)+a\sin(2\pi t/T)$,
+что обеспечивает компактное описание периодических всплесков.
+
+\section{Подход SINdy и недавние результаты}
+
+Алгоритм SINdy \cite{BruntonKutz2022}
+решает обратную задачу: по наблюдениям $\{r_t\}$ и
+оценкам $\{\dot r_t\}$ выбирает редкий набор
+функций из библиотеки $\Theta(r)$, минимизируя
+$\|\dot r - \Theta \Xi\|_2$ при LASSO- или
+SBL-регуляризации.  
+Для финансовых рядов важна устойчивость к шуму и
+редким экстремам; последние разработки --
+robust SINDy \cite{Fung2025} и SINDyG
+для сетевых данных \cite{SINDyG2024} --
+дают пригодные процедуры отбора
+со штрафом за мультиколлинеарность.
+
+\section{Выбор функциональных форм для RUONIA}
+
+Исходя из эмпирики российского рынка:
+
 \begin{itemize}
-  \item \textbf{Доходности ОФЗ и свопы.} Формируют ожидание долгосрочного уровня $b$; Банк Канады \autocite{BoC2007} и Банк России \autocite{BoCRu2023} используют своповую кривую в качестве ориентира.
-  \item \textbf{Валютный курс.} Процентный паритет связывает дифференциал ставок с форвардной премией; МВФ \autocite{IMF2023} фиксирует сильную реакцию курсов EM-валют на изменения местных ставок.
-  \item \textbf{Фондовый рынок.} Низкие ставки стимулируют рост акций, высокие — охлаждают рынок \autocite{RBC2024}. Индекс Мосбиржи служит индикатором финансовых условий.
+      \item \textbf{Дрейф.} Linear mean-reversion к плавающему
+        уровню $\theta(t)$ (аналог Hull-White) +
+        сезонная синусоида на конец месяца (вид "tax day" для рубля).
+        Поддерживается выводами ЦБ РФ о волатильности спрэда
+        RUONIA-key rate \cite{BoRTrans2024}.
+
+      \item \textbf{Волатильность.}
+        На интервале ставок $15\!-\!25\%$ дисперсия близка к пропорциональной,
+        что указывает на модель CIR; однако для отрицательных
+        значений невозможна.  
+        Компромисс -- \emph{shifted-CIR} с сдвигом $\gamma$
+        или lognormal (BK) при низких ставках.
 \end{itemize}
 
-\section{Импликации для модели RUONIA}
-На основании обзора целесообразно использовать спецификацию
-\[
-  \mathrm{d}r_t = \bigl[a_0 + S\sin(2\pi t) + C\cos(2\pi t) - a\,r_t\bigr]\mathrm{d}t
-    + \sigma\,r_t^{\gamma}\,\mathrm{d}W_t,
-  \quad \gamma\in[0.5,1.5],
-\]
-где $a_0,S,C$ калибруются по своповой кривой и доходностям ОФЗ, а показатель $\gamma$ — из регрессии дисперсии на уровень RUONIA. Классификация режимов по валютным курсам и индексу Мосбиржи позволит дополнительно проверять стабильность параметров.
+
+\section{Обоснование наблюдаемых переменных}
+
+\begin{itemize}
+  \item \textbf{Своповые цены}  Отражают безрисковую кривую
+        и стабилизируют оценку $\theta(t)$
+        для однофакторных моделей \cite{HullWhite1990}.
+  \item \textbf{Доходности ОФЗ}  В отчётах Банка России
+        OFZ-доходности фигурируют как основной
+        high-frequency индикатор монетарных условий,
+        коррелируя с RUONIA-spread \cite{BoRTrans2024}.
+  \item \textbf{Курсы EUR, USD, CNY}  Реакция рублевой
+        краткосрочной ставки на внешний шок
+        выражена через FX-премию риска (covered interest-rate parity).
+  \item \textbf{Индекс Мосбиржи}  Широкий индикатор
+        ликвидности и ожиданий инфляции,
+        влияющих на короткий конец кривой.
+\end{itemize}
+
+Эти переменные входят в библиотеку кандидатов
+SINdy как потенциальные \emph{экзогенные} регрессоры.
+
+\begin{table}[htbp]
+\small                         
+\centering
+\caption{Библиотека кандидатных термов $\Theta(r_t,\mathbf{x}_t)$ для алгоритма \textsc{SINDy}}
+\label{tab:sindy-library}
+\renewcommand{\arraystretch}{1.15}
+\begin{tabularx}{\textwidth}{@{}l>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}m{2.8cm}@{}}
+\toprule
+\textbf{Функция} & \textbf{Экономическая / статистическая мотивация} & \textbf{Литература} \\
+\midrule
+$1$                                   & Базовый уровень дрейфа (константный компонент)                                          & \cite{Vasicek1977,HullWhite1990} \\[2pt]
+$r_t$                                 & Линейная mean-reversion (гауссовский Васичек)                                            & \cite{Vasicek1977} \\[2pt]
+$r_t^{2}$                             & Квадратичный дрейф / 3/2-модель                                                         & \cite{Rogers2024threehalf,Chan1992} \\[2pt]
+$r_t^{3}$                             & Дополнительная кривизна при высоких ставках                                              & \cite{Rogers2024threehalf} \\[2pt]
+$\sqrt{r_t}$                          & Квадрат-корневой диффузионный термин (CIR)                                               & \cite{CIR1985} \\[2pt]
+$\log r_t$                            & Логнормальная спецификация (Black-Karasinski)                                            & \cite{BlackKarasinski1991} \\[2pt]
+$1/r_t$                               & Reciprocal-root-process -- подчёркнутая гетероскедастичность                               & \cite{Andersen2005} \\[2pt]
+\midrule
+$\sin(2\pi t/T)$                      & Сезонность (конец месяца/квартала)                                                      & \cite{Beltran2024,Jha2025} \\[2pt]
+$\cos(2\pi t/T)$                      & Фазовый сдвиг той же сезонности                                                         & \cite{Beltran2024,Jha2025} \\[2pt]
+$r_t\sin(2\pi t/T)$                   & Усиление сезонного эффекта при высоких ставках                                           & \cite{Beltran2024} \\[2pt]
+$r_t\cos(2\pi t/T)$                   & То же -- с косинусоидой                                                                   & \cite{Beltran2024} \\[2pt]
+\midrule
+$\Delta y^{\text{OFZ}}_{t,k}$         & Шок кривой ОФЗ -- канал гос.долга                                                        & \cite{BoRTrans2024} \\[2pt]
+$r_t\,\Delta y^{\text{OFZ}}_{t,k}$    & State-dependent монетарный эффект                                                       & \cite{BoRTrans2024} \\[2pt]
+$\Delta s^{\text{swap}}_{t}$          & Сдвиг swap-rate (якорь безрисковой кривой)                                              & \cite{HullWhite1990} \\[4pt]
+\midrule
+\multicolumn{3}{@{}l}{\bfseries FX-шоки (USD, EUR, CNY)}\\[-2pt]
+$\Delta\ln\text{FX}_{t}^{c}$                       & Девальвационный шок в валюте $c\!\in\!\{\mathrm{USD,EUR,CNY}\}$ (covered interest parity) & \cite{chen2023macrofinancial,huang2024transfer} \\[2pt]
+$\lvert\Delta\ln\text{FX}_{t}^{c}\rvert$           & Амплитуда FX-колебаний -- прокси внешней волатильности                                   & \cite{chen2023macrofinancial} \\[2pt]
+$\Delta\ln\text{FX}_{t-1}^{c}$                     & Лаг FX-шока -- инерционное влияние на денежный рынок                                     & \cite{chen2023macrofinancial} \\[2pt]
+$r_t\,\Delta\ln\text{FX}_{t}^{c}$                  & Взаимодействие уровня ставки и внешнего шока                                            & \cite{chen2023macrofinancial,huang2024transfer} \\[4pt]
+\midrule
+$\Delta\ln\text{MOEX}_t$              & Шок ликвидности / инфляционные ожидания через рынок акций                               & \cite{BoRTrans2024} \\[2pt]
+\midrule
+$\hat h_{t-1}$                        & Условная дисперсия (GARCH/GAS) -- proxy внутренней волатильности                         & \cite{Engle1982,Bollerslev1986} \\[2pt]
+$J^{\text{EoM}}_t$                    & 0–1 индикатор «последний рабочий день месяца» (прыжки ликвидности)                      & \cite{Beltran2024} \\[2pt]
+\bottomrule
+\end{tabularx}
+\end{table}
+
+
+
+\section{Заключение}
+Современная практика моделирования
+overnight-ставок сводится к углублённым,
+но всё ещё \emph{однофакторным} СДУ,
+обогащённым переменными сезонности
+и скачков денежного рынка.  
+Метод SINdy предоставляет системный способ
+отобрать минимальный, интерпретируемый набор
+термов, что позволяет гибко сочетать
+линейный дрейф, квадрат-корневую
+или логнормальную волатильность и экзогенные
+финансовые факторы -- т.е. ровно то,
+что требуется для RUONIA.
