--- a/docs/tex/main.tex
+++ b/docs/tex/main.tex
@@ -3,19 +3,116 @@
 \input{includes/settings}
 
 \begin{document}
-\justifying
-%\input{proposal}  
 
-\input{lit_review}
-%\input{timeline}
+\section{Введение}
+\textbf{Мотивация.}
+RUONIA — ключевой овернайт-бенчмарк денежного рынка РФ; точность прогнозов на горизонтах 1–30 дней влияет на стоимость фондирования и на back-testing VaR/ES. Для практики нужен не только точечный прогноз $\mathbb{E}[r_{t+h}\mid\mathcal F_t]$, но и \emph{калиброванные интервалы} с контролируемой шириной. OU/Васичек даёт интерпретируемую среднюю динамику, но может недоучитывать нелинейности и режимы волатильности. Мы комбинируем \emph{символьные SDE} (SINDy-семейство) с аккуратной оценкой диффузии и сравниваем их с Васичеком на реальных данных.
 
-\clearpage
-\begin{landscape}
-\input{data\_publication\_metadata}
-\end{landscape}
+\paragraph{Определения.}
+\textbf{RUONIA} — средневзвешенная ставка по необеспеченным межбанковским сделкам O/N (публикация на следующий день).\footnote{Методика публикации RUONIA.}
+\textbf{Волатильность} $\sigma_t^2=\mathrm{Var}(\Delta r_{t+1}\mid\mathcal F_t)$ — условная дисперсия при переходе $t\!\to\! t\!+\!1$.
+\textbf{bp} — один базисный пункт, $1\,\mathrm{bp}=0.01\%$.
+\textbf{VaR, ES} — регуляторные риск-метрики с обязательным бэктестом.
 
-\clearpage
+\vspace{0.25em}
+\noindent\textbf{Цель.} Построить компактный, воспроизводимый конвейер для \emph{мультигоризонтного} прогноза RUONIA (+7, +14, +30 дней) с доверительными интервалами, сравнить \emph{Васичек} vs \emph{SINDy-подобные SDE} (в т.ч. e-SINDy и Bayes-SINDy), оценить качество по MAE, coverage@3σ и средней прогнозной дисперсии (\textbf{avg\_std}) как прокси «узости» интервалов.
+
+%==========================
+\section{Данные и выбор переменных}
+\textbf{Источник и частота.} Ежедневные данные 2014-01-16—2025-07-07 (см. data/raw/merged\_*.parquet): RUONIA (таргет), ROISFIX (1W…1Y), безкупонная кривая ОФЗ (теноры 0.25…30Y), FX (USD/EUR/CNY к RUB), индекс IMOEX. Пропуски — ffill, затем удаление оставшихся NaN.
+
+\paragraph{Сплит и масштабирование.}
+Временное разделение train/test выполняется \emph{до} масштабирования. Для $r$ и экзогенов $u$ обучается StandardScaler только на train; затем трансформации применяются ко всему периоду. Целевая для дрейфа — \emph{годовая скорость} в $z$-масштабе:
+\[
+r_z=\frac{r-\mu_r}{\mathrm{sd}_r},\quad 
+\Delta r_z=r_z(t{+}1)-r_z(t),\quad 
+\mathrm{drift}_z=\frac{\Delta r_z}{\mathrm{d}t_{\text{years}}},
+\]
+где $\mathrm{d}t_{\text{years}}$ — фактическая доля года между датами.
+
+\paragraph{Подбор экзогенных признаков (u).}
+В ноутбуке {01\_1st\_sindy\_drift.ipynb} реализован селектор:
+\begin{enumerate}
+  \item Кандидаты: \textit{swap\_pool}=\{ROISFIX 1W…1Y\}, \textit{ofz\_pool}=\{ZCYC 0.25…30Y\}, \textit{fx\_full}=\{USD, EUR, CNY\}, плюс \textit{IMOEX}.
+  \item На {train} вычисляется корреляция каждой колонки с $\mathrm{drift}_z$; берутся \emph{top-k} (по модулю) для свопов и ОФЗ (значения $k$ — в коде).
+  \item Формируются комбинации: выбранные ROISFIX + выбранные ZCYC + \{IMOEX\} + подмножество FX.
+  \item Для $u_{t+h}$ используется AR(1)-экстраполяция (МНК, отсечка $|\rho_j|\le 0.99$).
+\end{enumerate}
+
+%==========================
+\section{Модели и реализация}
+\subsection*{Базовая модель Vasicek/OU}
+Оценка дискретной формы $r_{t+1}=A+B r_t+\varepsilon_t$ на {train} с переходом к параметрам OU: $\kappa=-\ln B/\mathrm{d}t$, $\theta=A/(1-B)$. Для мультишаговых прогнозов используются аналитические формулы условного среднего и дисперсии. Интерпретируемый бенчмарк денежного рынка.
+
+\subsection*{SINDy-like (raw)}
+\textbf{Дрейф.} Библиотека термов (в $z$-масштабе): полиномы $r_z$, тригонометрия (по флагу), специальные термы $\{\sqrt{\max(r_z,0)},\,1/r_z\}$, линейные/квадратичные $u_z$, а также перекрёстные $r_z\!\times\!u_z$ и $u_i u_j$. Затем L1 ({lasso}) $\to$ \emph{pruning} нулевых термов $\to$ ridge-refit на оставшихся.
+\textbf{Диффузия.} Модель $\log\sigma^2(r,u)$ с той же библиотекой: L1 $\to$ pruning $\to$ ridge. 
+\textbf{Прогноз.} Для горизонта $H$ интегрируем дрейф и аккумулируем дисперсию:
+$\mathrm{Var}(r_{t+h})\approx\sum_{s=0}^{h-1}\sigma^2(r_{t+s},u_{t+s})\,\mathrm{d}t_s$; получаем среднее и $3\sigma$-интервалы.
+
+\subsection*{e-SINDy (ансамбль)}
+Бутстрэп-ансамбль L1$\to$OLS: на подвыборках {train} подбираются спарс-термы для дрейфа и лог-диффузии; затем ridge-refit на устойчивом наборе предикторов. Снижает дисперсию выбора структуры.
+
+\subsection*{Bayes-SINDy (ARD)}
+{ARDRegression} поверх стандартизованных термов: отбор по апостериорной релевантности, затем ridge-refit. Аналогично для лог-диффузии. Устойчив к мультиколлинеарности и даёт байесовские меры важности.
+
+\paragraph{Реализация.}
+Все шаги — в {01\_1st\_sindy\_drift.ipynb}: {train/test}, скейлинг только по {train}, учёт $\mathrm{d}t_{\text{years}}$, согласование масштабов, прогнозы для $H\!\in\!\{7,14,30\}$ и построение $3\sigma$-интервалов.
+
+%==========================
+\section{Оценка качества и результаты}
+\textbf{Метрики.} 
+MAE (point), coverage@3σ (эмпирическое покрытие интервалов), \textbf{avg\_std} — среднее прогнозное стандартное отклонение (мера «узости» интервалов).
+
+\begin{center}
+\begin{tabular}{lcccc}
+\toprule
+\textbf{H} & \textbf{Model} & \textbf{coverage@3$\sigma$} & \textbf{avg\_std} & \textbf{MAE} \\
+\midrule
+7  & Bayes-SINDy(raw) & 0.7976 & 0.1256 & 0.2756 \\
+7  & SINDy-like       & 0.8095 & 0.1578 & 0.3139 \\
+7  & Vasicek          & \textbf{1.0000} & 0.8075 & \textbf{0.2717} \\
+7  & e-SINDy(raw)     & 0.7738 & 0.1583 & 0.3220 \\
+\midrule
+14 & Bayes-SINDy(raw) & 0.7013 & 0.1747 & 0.4105 \\
+14 & SINDy-like       & 0.6883 & 0.2193 & 0.5324 \\
+14 & Vasicek          & \textbf{1.0000} & 1.1351 & \textbf{0.4018} \\
+14 & e-SINDy(raw)     & 0.7792 & 0.2212 & 0.5259 \\
+\midrule
+30 & Bayes-SINDy(raw) & 0.4918 & 0.2442 & 0.8813 \\
+30 & SINDy-like       & 0.4098 & 0.3113 & 1.2367 \\
+30 & Vasicek          & \textbf{1.0000} & 1.6391 & \textbf{0.5408} \\
+30 & e-SINDy(raw)     & 0.5738 & 0.3180 & 0.8811 \\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\noindent\textbf{Наблюдение.} SINDy-модели дают \emph{существенно более компактные интервалы}: их avg\_std в \textbf{~5–7× ниже}, чем у Vasicek на всех горизонтах (напр., +7дн: 0.126–0.158 vs 0.808; +30дн: 0.244–0.318 vs 1.639). Это — \emph{преимущество} SINDy-подхода: после калибровки покрытий можно удержать требуемое coverage при значительно более узких, капитало-эффективных интервалах. В текущих результатах Vasicek выигрывает по MAE, а SINDy недокрывает на 30 днях — это указывает на необходимость калибровки неопределённости и уточнения экзогенов.
+
+%==========================
+\section{Выводы и дальнейшее развитие}
+\textbf{Вывод.} Построен воспроизводимый SDE-конвейер для RUONIA (Vasicek, SINDy-like, e-SINDy, Bayes-SINDy) с мультигоризонтными интервалами и корректным учётом масштабов. \emph{Сильная сторона} SINDy — узкие интервалы (низкий avg\_std); \emph{точка роста} — калибровка покрытий и MAE на длинных горизонтах.
+
+\paragraph{Куда расти.}
+\begin{enumerate}
+  \item \textbf{Калибровка интервалов без раздувания ширины:} conformal prediction (ACP/CQR) поверх прогнозной дисперсии; PIT-калибровка (isotonic/Platt); \emph{variance inflation} с таргетом на coverage 90–95\% при минимизации роста avg\_std; бутстрэп по остаткам.
+  \item \textbf{MAE на +30 днях:} гибрид Vasicek (сильный mean-path) + SINDy (гибкая $\sigma$): switching-OU / Markov-switching; GAS/GARCH для $\sigma_t$; group-lasso по блокам признаков.
+  \item \textbf{Экзогены и $u_{t+h}$:} расширить ликвидностные/денежные факторы (аукционы ЦБ, структурный дефицит/профицит, налоговые периоды), события (заседания, НКД); улучшить AR-проекции $u$ (shrinkage для $\rho$, IC/SPA-отбор).
+  \item \textbf{Rolling/monitoring:} адаптивный рефит при дрейфе (CUSUM/SPRT), сглаживание коэффициентов (Kalman/discounted LS), мониторинг стабильности выбранных термов SINDy.
+  \item \textbf{Neural SDE / PINNs:} совместная аппроксимация дрейфа/диффузии, квантильные SDE, байесовское усреднение спецификаций (BMA) для надёжных интервалов.
+\end{enumerate}
+
+%==========================
+\section*{Формат репозитория}
+Репозиторий {ruonia-forecast} включает данные, ноутбуки и модульный код для полного воспроизведения: предобработка, обучение Васичека и трёх SINDy-вариантов, мультигоризонтные прогнозы, метрики и визуализации (см. README и {01\_1st\_sindy\_drift.ipynb}).
+
+%==========================
+% Предельно компактная библиография
+\begingroup
+\setlength\bibitemsep{0.5pt}
+\renewcommand*{\bibfont}{\tiny}
+\printbibliography
+\endgroup
 
 
-\printbibliography 
 \end{document}
